--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,12 @@
     margin-top:50px;
     margin-bottom:50px;
 }
+body{
+    background-color:antiquewhite ;
+    font-family:'Times New Roman', Times, serif ;
+    font-size: 20px;
+}
+h1{
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+}
